# LidarInertialFGO

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
matlab/decodeLidar/: GTdeploy.m  SimulinkModel.slx  SimulinkModel2.slx  SimulinkModel2.slx.autosave
matlab/decodeLidar/bus/RawSensorMessage/: busRawSensorMessage_LidarNavMeasurement.mat  busRawSensorMessage_LidarNavMeasurementSD.mat  busRawSensorMessage_LidarOdometry.mat  busRawSensorMessage_LidarSensorMeasurement.mat  busRawSensorMessage_LidarTimestamp.mat
matlab/decodeLidar/bus/poseGraph/: poseGraphMessage_singleFrame.mat  poseGraphMessage_singleFrame_edges.mat  poseGraphMessage_singleFrame_nodes.mat  poseGraphMessage_singleFrame_points.mat  poseGraphMessage_subMap.mat  poseGraphMessage_subMap_edges.mat  poseGraphMessage_subMap_nodes.mat  poseGraphMessage_subMap_points.mat
matlab/decodeLidar/parameter/: Parameter.mat
source/include/: slam.hpp
source/include/Common/: ParseUtils.hpp  StopWatch.hpp  Timer.hpp
source/include/Core/: slam.hpp
source/include/Core/Common/: Timer.hpp
source/include/Core/Evaluable/: Evaluable.hpp  Node.hpp  StateKeyJacobians.hpp  StateVariable.hpp  StateVariableBase.hpp
source/include/Core/MatrixOperator/: BlockMatrix.hpp  BlockMatrixBase.hpp  BlockMatrixIndexing.hpp  BlockSparseMatrix.hpp  BlockVector.hpp
source/include/Core/Problem/: OptimizationProblem.hpp  Problem.hpp  SlidingWindowFilter.hpp  StateVector.hpp
source/include/Core/Solver/: Covariance.hpp  DoglegGaussNewtonSolver.hpp  GaussNewtonSolver.hpp  GaussNewtonSolverNVA.hpp  LevMarqGaussNewtonSolver.hpp  LineSearchGaussNewtonSolver.hpp  SolverBase.hpp
source/include/Core/Trajectory/: Interface.hpp  Time.hpp
source/include/DymCluster/: ClusterExtraction.hpp  Hungarian.hpp
source/include/DymMap/: OccupancyMap.hpp  Pipeline.hpp
source/include/Evaluable/: Evaluable.hpp  Node.hpp  NodeBase.hpp  StateKey.hpp  StateKeyJacobians.hpp  StateVariable.hpp  StateVariableBase.hpp
source/include/Evaluable/imu/: AccErrorEvaluator.hpp  DmiErrorEvaluator.hpp  Evaluables.hpp  GyroErrorEvaluator.hpp  GyroErrorEvaluatorSE2.hpp  IMUErrorEvaluator.hpp
source/include/Evaluable/point2point/: Evaluables.hpp  VelErrorEvaluator.hpp  YawErrorEvaluator.hpp  YawVelErrorEvaluator.hpp  p2pErrorEvaluator.hpp  p2planeErrorEvaluator.hpp  p2planeGlobalPerturbEvaluator.hpp
source/include/Evaluable/se3/: ComposeEvaluator.hpp  ComposeInverseEvaluator.hpp  ComposeVelocityEvaluator.hpp  Evaluables.hpp  ExpMapEvaluator.hpp  InverseEvaluator.hpp  LogMapEvaluator.hpp  PoseInterpolator.hpp  Se3ErrorEvaluator.hpp  Se3ErrorGlobalPerturbEvaluator.hpp  Se3StateVariable.hpp  Se3StateVariableGlobalPerturb.hpp
source/include/Evaluable/vspace/: AdditionEvaluator.hpp  Evaluables.hpp  MatrixMultEvaluator.hpp  MergeEvaluator.hpp  NegationEvaluator.hpp  PreIntVelocityStateVar.hpp  ScalarMultEvaluator.hpp  VSpaceErrorEvaluator.hpp  VSpaceInterpolator.hpp  VSpaceStateVar.hpp
source/include/LGMath/: CommonMath.hpp  CommonTools.hpp  LieGroupMath.hpp
source/include/LGMath/r3/: Operations.hpp
source/include/LGMath/se3/: Operations.hpp  Transformation.hpp  TransformationWithCovariance.hpp
source/include/LGMath/so3/: Operations.hpp
source/include/LieGroupMath/: LieGroupMath.hpp
source/include/LieGroupMath/r3/: Operations.hpp  Types.hpp
source/include/LieGroupMath/se3/: Operations.hpp  TransformationWithCovariance.hpp  Types.hpp
source/include/LieGroupMath/so3/: Rotations.hpp  Types.hpp
source/include/MatrixOperator/: BlockDimensionIndexing.hpp  BlockMatrix.hpp  BlockMatrixBase.hpp  BlockMatrixIndexing.hpp  BlockSparseMatrix.hpp  BlockVector.hpp
source/include/Problem/: OptimizationProblem.hpp  Problem.hpp  SlidingWindowFilter.hpp  StateVector.hpp
source/include/Problem/CostTerm/: BaseCostTerm.hpp  GyroSuperCostTerm.hpp  IMUSuperCostTerm.hpp  WeightLeastSqCostTerm.hpp
source/include/Problem/LossFunc/: BaseLossFunc.hpp  CauchyLossFunc.hpp  DynCovScalingLossFunc.hpp  GemanMcClureLossFunc.hpp  HuberLossFunc.hpp  L1LossFunc.hpp  L2LossFunc.hpp  LossFunc.hpp
source/include/Problem/NoiseModel/: BaseNoiseModel.hpp  DynamicNoiseModel.hpp  StaticNoiseModel.hpp
source/include/Solver/: Covariance.hpp  DoglegGaussNewtonSolver.hpp  GaussNewtonSolver.hpp  GaussNewtonSolverNVA.hpp  LevMarqGaussNewtonSolver.hpp  LineSearchGaussNewtonSolver.hpp  SolverBase.hpp
source/include/Trajectory/: Interface.hpp
source/include/Trajectory/Bspline/: Interface.hpp  Variable.hpp  VelocityInterpolator.hpp
source/include/Trajectory/ConstAcceleration/: AccelerationExtrapolator.hpp  AccelerationInterpolator.hpp  Helper.hpp  Interface.hpp  PoseExtrapolator.hpp  PoseInterpolator.hpp  PriorFactor.hpp  Variables.hpp  VelocityExtrapolator.hpp  VelocityInterpolator.hpp
source/include/Trajectory/Singer/: Helper.hpp  (+8 more)
source/include/Utils/: cellKey.hpp  cluster.hpp  colorMode.hpp  constants.hpp  dataframe.hpp  mapconfig.hpp  point.hpp  voxel.hpp
source/include/evaluable/: evaluable.hpp  jacobians.hpp  node.hpp  nodeBase.hpp  stateKey.hpp  stateKeyJacobians.hpp  stateVariable.hpp  stateVariableBase.hpp
source/include/lidarPreProcessing/: lidarPreProcessing.hpp
source/include/lieGroupMath/: CommonMath.hpp  CommonTools.hpp  lieGroupMath.hpp
source/samples/: BSplineTrajectoryExample.cpp  DymMapAndDymClusterExample.cpp
source/src/DymCluster/: ClusterExtraction.cpp  Hungarian.cpp
source/src/DymMap/: OccupancyMap.cpp  Pipeline.cpp
source/src/LGMath/: CommonMath.cpp
source/src/LieGroupMath/: CommonMath.cpp
source/src/MatrixOperator/: BlockDimensionIndexing.cpp  BlockMatrix.cpp  BlockMatrixBase.cpp  BlockMatrixIndexing.cpp  BlockSparseMatrix.cpp  BlockVector.cpp
source/src/Problem/: OptimizationProblem.cpp  SlidingWindowFilter.cpp  StateVector.cpp
source/src/Solver/: Covariance.cpp  DoglegGaussNewtonSolver.cpp  GaussNewtonSolver.cpp  GaussNewtonSolverNVA.cpp  LevMarqGaussNewtonSolver.cpp  LineSearchGaussNewtonSolver.cpp  SolverBase.cpp
source/src/Trajectory/: Time.cpp
source/src/lidarPreProcessing/: lidarPreProcessing.cpp
source/src/lieGroupMath/: CommonMath.cpp
(+253 files in other folders)
